create form to store new employee

--- a/asp-net-crud/Views/Employees/Add.cshtml
+++ b/asp-net-crud/Views/Employees/Add.cshtml
@@ -1,22 +1,19 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model asp_net_crud.Models.AddEmployeeViewModel
 @{
-
 }
 <form method="POST" action="Add">
     <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <label for="name" class="form-label">Nome</label>
+        <input type="text" class="form-control" aria-describedby="emailHelp" asp-for="Name">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" class="form-control" aria-describedby="emailHelp" asp-for="Email">
+        <label for="salary" class="form-label">Stipendio</label>
+        <input type="number" class="form-control" aria-describedby="emailHelp" asp-for="Salary">
+        <label for="dateOfBirth" class="form-label">Data di nascita</label>
+        <input type="date" class="form-control" aria-describedby="emailHelp" asp-for="DateOfBirth">
+        <label for="department" class="form-label">Reparto</label>
+        <input type="text" class="form-control" aria-describedby="emailHelp" asp-for="Department">
     </div>
-    <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
+
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
