--- a/asp-net-crud/Views/Employees/View.cshtml
+++ b/asp-net-crud/Views/Employees/View.cshtml
@@ -2,7 +2,7 @@
 @{
 }
 <div class="container">
-    <h1 class="my-3"> Aggiungi un nuovo lavoratore</h1>
+    <h1 class="my-3"> Scheda lavoratore</h1>
     <form method="POST" action="View">
         <div class="mb-3">
             <label for="id" class="form-label">Id</label>
@@ -19,6 +19,6 @@
             <input type="text" class="form-control" placeholder="Inserisci reparto..." asp-for="Department">
         </div>
 
-        <button type="submit" class="btn btn-primary">Aggiungi</button>
+        <button type="submit" class="btn btn-primary">Modifica</button>
     </form>
 </div>
