--- a/asp-net-crud/Views/Employees/View.cshtml
+++ b/asp-net-crud/Views/Employees/View.cshtml
@@ -20,5 +20,6 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Modifica</button>
+        <button type="submit" class="btn btn-danger" asp-action="Delete" asp-controller="Employees">Delete</button>
     </form>
 </div>
